--- a/index.html
+++ b/index.html
@@ -137,22 +137,22 @@
         <div class="products">
             <div class="product" onclick="showPopup('Akun Free Fire Sultan', '🔥 Akun dengan banyak skin langka dan level tinggi! Dijamin aman dan legal!')">
                 <img src="logo1.png" alt="Akun Sultan">
-                <p>Akun Free Fire Sultan</p>
+                <p>Stok Pertama❗</p>
             </div>
 
             <div class="product" onclick="showPopup('Akun Free Fire Rank Tinggi', '🏆 Akun dengan rank tinggi, siap push rank dengan cepat!')">
                 <img src="logo2.png" alt="Akun Rank Tinggi">
-                <p>Akun Free Fire Rank Tinggi</p>
+                <p>Stok Kedua☢️</p>
             </div>
 
             <div class="product" onclick="showPopup('Akun Free Fire Bundle Eksklusif', '🎭 Akun dengan bundle eksklusif dan koleksi item langka!')">
                 <img src="logo3.png" alt="Akun Bundle Eksklusif">
-                <p>Akun Free Fire Bundle Eksklusif</p>
+                <p>Stok Ketiga⚠️</p>
             </div>
 
             <div class="product" onclick="showPopup('Akun Free Fire Spesial Event', '🎉 Akun yang memiliki item spesial dari event-event tertentu!')">
                 <img src="logo4.png" alt="Akun Spesial Event">
-                <p>Akun Free Fire Spesial Event</p>
+                <p>Stok Keempat‼️</p>
             </div>
         </div>
 
