--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
         <p>🔥 Stok akun Free Fire terbaik, harga murah meriah! 🔥</p>
 
         <div class="products">
-            <div class="product" onclick="showPopup('Akun Free Fire Sultan', '🔥 Akun dengan banyak skin langka dan level tinggi! Dijamin aman dan legal!')">
+            <div class="product" onclick="showPopup('Akun Free Fire Polosan', '🔥 Akun dengan banyak skin langka dan level tinggi! Dijamin aman dan legal!')">
                 <img src="logo1.png" alt="Akun Sultan">
                 <p>Stok Pertama❗</p>
             </div>
 
-            <div class="product" onclick="showPopup('Akun Free Fire Rank Tinggi', '🏆 Akun dengan rank tinggi, siap push rank dengan cepat!')">
+            <div class="product" onclick="showPopup('Akun Free Fire Old ', '🏆 Akun dengan rank tinggi, siap push rank dengan cepat!')">
                 <img src="logo2.png" alt="Akun Rank Tinggi">
                 <p>Stok Kedua☢️</p>
             </div>
