--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         </div>
 
         <div class="footer">
-            <p>Info Lebih Lanjut Atau Berminat Dengan Produk Kami Hubungi Melalui</p>
+            <p>Info Lebih Lanjut Atau Berminat Dengan Produk Kami Hubungi melalui whatsapp dibawah 
+            ©Desaigner Website Zeet Hosting</p>
             <a href="https://wa.me/6285932121924" style="color: #ffcc00; font-size: 22px; font-weight: bold;">WhatsApp</a>
         </div>
     </div>
