--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Halaman Produk -->
     <div class="content">
         <div class="marquee">
-            <div>Akun Yang Kami Jual Aman Dan Bergaransi 100%</div>
+            <div>Akun Yang Kami Jual Aman Dan Bergaransi 100%   Designer Website Ini Adalah Zeet Hosting</div>
         </div>
 
         <h1>Jeri Store Mdr</h1>
@@ -157,8 +157,7 @@
         </div>
 
         <div class="footer">
-            <p>Info Lebih Lanjut Atau Berminat Dengan Produk Kami Hubungi melalui whatsapp dibawah 
-            ©Desaigner Website Zeet Hosting</p>
+            <p>Info Lebih Lanjut Atau Berminat Dengan Produk Kami Hubungi melalui whatsapp dibawah </p>
             <a href="https://wa.me/6285932121924" style="color: #ffcc00; font-size: 22px; font-weight: bold;">WhatsApp</a>
         </div>
     </div>
